# C-SPIKES

./: .gitignore  CMakeLists.txt  CSPIKES_demo.ipynb  CSPIKES_demo.py  README.md  README_CodeOcean.md  compare_inference_methods.py  compare_inference_methods_full.py  extract_time_stamp_edges.py  gcamp_model_fe.py  kokkos_install.md  model_eval_demo.py  pyproject.toml  sim_w_K_demo.py
.github/workflows/: vcpkg_cache.yml  whl_cache.txt  whl_cache.yml  whl_cache2.yml
Pretrained_models/BiophysML/bio_ml_ens2_bio_ml_run_1_r9_s1p3_d0p35_sb0/: ens2_manifest.json
Pretrained_models/CASCADE/Cascade_Universal_30Hz/: Model_NoiseLevel_2_Ensemble_0.keras  Model_NoiseLevel_2_Ensemble_1.keras  Model_NoiseLevel_2_Ensemble_2.keras  Model_NoiseLevel_2_Ensemble_3.keras  Model_NoiseLevel_2_Ensemble_4.keras  Model_NoiseLevel_3_Ensemble_2.keras  Model_NoiseLevel_3_Ensemble_3.keras  Model_NoiseLevel_4_Ensemble_1.keras  Model_NoiseLevel_4_Ensemble_3.keras  Model_NoiseLevel_4_Ensemble_4.keras  Model_NoiseLevel_5_Ensemble_2.keras  Model_NoiseLevel_5_Ensemble_4.keras  Model_NoiseLevel_6_Ensemble_0.keras  Model_NoiseLevel_6_Ensemble_4.keras  Model_NoiseLevel_7_Ensemble_0.keras  Model_NoiseLevel_7_Ensemble_2.keras  Model_NoiseLevel_8_Ensemble_1.keras  Model_NoiseLevel_8_Ensemble_2.keras  config.yaml
Pretrained_models/CASCADE/universal_p_cascade_exc_30/: Model_NoiseLevel_2_Ensemble_4.keras  Model_NoiseLevel_3_Ensemble_0.keras  Model_NoiseLevel_3_Ensemble_3.keras  Model_NoiseLevel_4_Ensemble_2.keras  Model_NoiseLevel_4_Ensemble_3.keras  Model_NoiseLevel_5_Ensemble_2.keras  Model_NoiseLevel_6_Ensemble_3.keras  Model_NoiseLevel_6_Ensemble_4.keras  Model_NoiseLevel_7_Ensemble_2.keras  Model_NoiseLevel_7_Ensemble_3.keras  Model_NoiseLevel_7_Ensemble_4.keras  Model_NoiseLevel_8_Ensemble_0.keras  Model_NoiseLevel_8_Ensemble_1.keras  config.yaml
Pretrained_models/Cascade_Universal_30Hz/: Model_NoiseLevel_2_Ensemble_0.h5  Model_NoiseLevel_2_Ensemble_1.h5  Model_NoiseLevel_3_Ensemble_1.keras  Model_NoiseLevel_5_Ensemble_0.keras  Model_NoiseLevel_5_Ensemble_1.keras  Model_NoiseLevel_6_Ensemble_2.keras  Model_NoiseLevel_7_Ensemble_1.keras  Model_NoiseLevel_8_Ensemble_3.keras
code/: CMakeLists.txt  init_github.sh  pyproject.toml  run.sh  run_pipeline.py
code/dependencies/: CMakeLists.txt
code/notebooks/: inference_cache_compare.ipynb  trialwise_visualizations.ipynb
code/scripts/: c_spikes_gui.py  code_ocean_biophys_ml_demo.py  code_ocean_inference_demo.py  code_ocean_smoke_all.py  code_ocean_smoke_test.py  import_matlab_cache.py  pgas_to_ens2.py  plot_trialwise_trace_panel.py  profile_pgas_inference.py  sweep_pgas_to_ens2.sh  trialwise_correlations.py
code/src/c_spikes/: __init__.py  pipeline.py
code/src/c_spikes/cascade2p/: cascade.py
code/src/c_spikes/cli/: run.py
code/src/c_spikes/gui/: __init__.py  data.py  inference.py  smc_viz.py
code/src/c_spikes/inference/: __init__.py  cache.py  cascade.py  ens2.py  import_external.py  pgas.py  workflow.py
code/src/c_spikes/model_eval/: model_eval.py
code/src/c_spikes/pgas/: bindings.cpp  constants.cpp  utils.cpp
code/src/c_spikes/pgas/include/: Analyzer.h  GCaMP_model.h
code/src/c_spikes/syn_gen/: __init__.py
code/src/c_spikes/viz/: trialwise_plots.py
code/tests/: test_code_ocean_inference_plumbing.py  test_dependency_imports.py  test_inference_smoke.py  test_pgas.py  test_syn_gen_unit.py
codeocean_data_asset/: README.md
codeocean_data_asset/parameter_files/: constants_GCaMP8_soma.json
codeocean_data_asset/reference_outputs/paper_summaries/: method_series_map.csv  trialwise_correlations_jG8f_param_comparison.csv  trialwise_correlations_jG8m.csv
data/: DATA_MANIFEST.csv  DATA_MANIFEST.json  README.md
data/parameter_files/: constants_GCaMP8m_soma.json
data/reference_inputs/edges/: excitatory_jG8m_edges_2000pts.npy  excitatory_time_stamp_edges.npy
data/reference_outputs/paper_summaries/: method_series_map.csv  trialwise_correlations_jG8m.csv
environment/: Dockerfile  README.md  hpc_bootstrap_deps.sh  hpc_build.sh  postInstall  requirements.txt
notebooks/: trialwise_visualizations.ipynb
parameter_files/: constants_GCaMP8_soma.json  constants_GCaMP8_stoich_hill.json  params_fe.json
sample_data/janelia_8m/excitatory/: jGCaMP8m_ANM472180_cell02.mat  jGCaMP8m_ANM472180_cell04.mat  jGCaMP8m_ANM479115_cell01.mat  jGCaMP8m_ANM479115_cell02.mat  jGCaMP8m_ANM479115_cell09.mat  jGCaMP8m_ANM479117_cell02.mat  jGCaMP8m_ANM479117_cell03.mat  jGCaMP8m_ANM479117_cell04.mat  jGCaMP8m_ANM479117_cell05.mat  jGCaMP8m_ANM479118_cell02.mat  jGCaMP8m_ANM479118_cell05.mat  jGCaMP8m_ANM479569_cell03.mat  jGCaMP8m_ANM479569_cell04.mat  jGCaMP8m_ANM479569_cell06.mat  jGCaMP8m_ANM479569_cell08.mat  jGCaMP8m_ANM479570_cell04.mat  jGCaMP8m_ANM479570_cell05.mat
scripts/: PGAS_COMMIT_SWEEP_WORKFLOW.md  c_spikes_gui.py  compare_pgas_cpu_gpu.py  compare_summary_correlations.py  compare_summary_correlations_with_pgas.py  demo_compare_methods.py  demo_pgas_to_ens2.py  demo_rate_sanity.py  epoch_rate_stats.py  eval_ens2_dir.py  export_downsampled_mat_dir.py  inspect_synth_dir.py  pgas_commit_builds.json  pgas_cpu_gpu_compare.sbatch  pgas_sbatch_template.sbatch  pgas_to_cascade.py  plot_ens2_sweep_k_dotplots.py  plot_ens2_sweep_results.py  plot_trialwise_corr_vs_sigma.py  plot_trialwise_raincloud.py  plot_trialwise_trace_panel.py  submit_pgas_commit_builds.py  sweep_pgas_to_ens2.sh  test_refactor_inference.py  trialwise_correlations.py  validate_gui_mat.py
src/c_spikes/: _version.py  pipeline.py  tensorflow_env.py  utils.py
src/c_spikes/biophys_ml/: __init__.py  pipeline.py
src/c_spikes/cascade2p/: __init__.py  cascade.py  checks.py  utils.py  utils_discrete_spikes.py  utils_discrete_spikes_custom.py
src/c_spikes/cli/: run.py
src/c_spikes/ens2/: ENS2.py  __init__.py  discrete.py  ens.py  manifest.py  models.py  pytorchtools.py  utils.py
src/c_spikes/gui/: app.py  cache_import.py  inference.py  models.py  plotting.py  slurm.py  smc_viz.py
src/c_spikes/inference/: __init__.py  cache.py  cascade.py  (+7 more)
tests/: test_dependency_imports.py  test_pgas.py
(+213 files in other folders)
