# 
[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "c_spikes"
version = "0.1.0"
license.file = "LICENSE"
requires-python = ">=3.8, <3.10"
description = "End-to-end fluorescence to spike inference procedure"
authors = [
    { name = "Gerard Joey Broussard", email = "gerardjb@princeton.edu" },
]
dynamic = ["version"]
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "tensorflow",  # pip install CPU and GPU tensorflow
    "h5py",
    "ruamel.yaml",
]

# invoked via, e.g., "pip install -e .[test,dev]"
[project.optional-dependencies]
 test = [
   "pytest >=6",
   "pytest-cov >=3",
 ]
 dev = [
   "pytest >=6",
   "pytest-cov >=3",
 ]
 docs = [
   "sphinx>=7.0",
   "myst_parser>=0.13",
   "sphinx_copybutton",
   "sphinx_autodoc_typehints",
   "furo>=2023.08.17",
 ]
  jupyter = [
   "notebook",
   "jupyterlab",
   "ipykernel",
   "nbconvert",
   "nbformat",
 ]

 [tool.scikit-build]
 minimum-version = "0.4"
 cmake.args = ['-DCMAKE_TOOLCHAIN_FILE=vcpkg/scripts/buildsystems/vcpkg.cmake', '-DCMAKE_BUILD_TYPE=RelWithDebInfo']
 build-dir = "build/{wheel_tag}"
 metadata.version.provider = "scikit_build_core.metadata.setuptools_scm" # gets versions dynamically from git tags
 sdist.include = ["src/spike_find/_version.py"] # persistent storage of version without git history (as below)
 
 
 [tool.setuptools_scm]
 write_to = "src/spike_find/_version.py"
 
 # Prep across platforms/hardware/OS with unit tests
 [tool.cibuildwheel]
 test-command = "pytest {project}/tests"
 test-extras = ["test"]
 test-skip = ["*universal2:arm64"]

 [tool.pytest.ini_options]
 minversion = "6.0"
 addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
 xfail_strict = true
 filterwarnings = [
   "error",
 ]
 log_cli_level = "INFO"
 testpaths = [
   "tests",
 ]
