# 
[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "c_spikes"
#version = "0.1.0"
license.file = "LICENSE"
requires-python = ">=3.8" # Current happy place looks to be 3.10 across all the CUDAs and the torches and that
description = "End-to-end fluorescence to spike inference procedure"
authors = [
    { name = "Gerard Joey Broussard", email = "gerardjb@princeton.edu" },
]
dynamic = ["version"]
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "tensorflow",  # pip install CPU and GPU tensorflow
    "h5py",
    "ruamel.yaml",
    "torch >= 2",  # the version suggested by the ENS2 authors not comaptible - use >2 instead
    "tqdm == 4.64.0"    # Also ENS2-specific. Works, but may want to relax pin at some point
]

# invoked via, e.g., "pip install -e .[test]"
[project.optional-dependencies]
 test = [
   "pytest >=6",
   "pytest-cov >=3",
 ]
 docs = [
   "sphinx>=7.0",
   "myst_parser>=0.13",
   "sphinx_copybutton",
   "sphinx_autodoc_typehints",
   "furo>=2023.08.17",
 ]
  jupyter = [
   "notebook",
   "jupyterlab",
   "ipykernel",
   "nbconvert",
   "nbformat",
 ]

 [tool.scikit-build]
 minimum-version = "0.4"
 cmake.args = [
  '-DCMAKE_TOOLCHAIN_FILE=vcpkg/scripts/buildsystems/vcpkg.cmake', 
  '-DCMAKE_CXX_FLAGS=-DARMA_ALLOW_FAKE_GCC',
  # Build with debug symbols
  # '-DCMAKE_BUILD_TYPE=Debug',
  # '-DCMAKE_CXX_FLAGS=-g -O0',
  # Or for Release
  '-DCMAKE_BUILD_TYPE=Release',

  # Kokkos Debug
  #'-DKokkos_ENABLE_DEBUG=ON',
  #'-DKokkos_ENABLE_DEBUG_BOUNDS_CHECK=ON',
  #'-DKokkos_ENABLE_DEBUG_DUALVIEW_MODIFY_CHECK=ON',

  # Kokkos stuff,
  # '-DKOKKOS_DEBUG=ON',
  '-DKokkos_ENABLE_SERIAL=ON',
  '-DKokkos_ENABLE_OPENMP=ON',
  '-DKokkos_ENABLE_CUDA=ON',
  '-DKokkos_ARCH_AMPERE80=ON', # A100 with this option
  '-DKokkos_ENABLE_CUDA_CONSTEXPR=ON',
  ]
 build-dir = "build/{wheel_tag}"
 metadata.version.provider = "scikit_build_core.metadata.setuptools_scm" # gets versions dynamically from git tags
 sdist.include = ["src/c_spikes/_version.py"] # persistent storage of version without git history (as below)
 
 # Ensure proper version capture regardless of git file access
 [tool.setuptools_scm]
 write_to = "src/c_spikes/_version.py"
 
 # Prep across platforms/hardware/OS with unit tests
 [tool.cibuildwheel]
 test-command = "pytest {project}/tests"
 test-extras = ["test"]
 test-skip = ["*universal2:arm64"]

 [tool.pytest.ini_options]
 minversion = "6.0"
 addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
 xfail_strict = true
 filterwarnings = [
   "error",
 ]
 log_cli_level = "INFO"
 testpaths = [
   "tests",
 ]
